@@ -1,3 +1,7 @@
+Sat Oct 17 16:10:16 1998  Werner Koch  (wk@isil.d.shuttle.de)
+
+	* autogen.sh: New.
+
 Wed Oct 14 09:55:25 1998  Werner Koch  (wk@isil.d.shuttle.de)
 
 	* config.guess (FreeBSD): Changes from Jun Kuriyama to support ELF
